[package]
name = "fwsig"
description = "A specification (and tools) for firmware signing / verification"
repository = "https://github.com/ryankurte/fwsig"
version = "0.2.1"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cli = [ "clap", "anyhow", "simplelog", "std" ]
std = [ "thiserror", "log/std" ]
default = [ "cli", "ed25519-dalek/default" ]

[dependencies]
ed25519-dalek = { version = "1.0.1", default_features = false }
encdec = "0.8.2"
sha2 = { version = "0.9.9", default_features = false }
bitflags = "1.3.2"
strum = { version = "0.24.1", default_features = false, features = [ "derive" ] }
hex = { version = "0.4.3", default_features = false }
log = { version = "0.4.17", default_features = false }
rand_core = { version = "0.5.1", default_features = false }

anyhow = { version = "1.0.68", optional = true }
clap = { version = "4.0.32", optional = true, features = [ "derive", "std" ] }
simplelog = { version = "0.12.0", optional = true }
thiserror = { version = "1.0.38", optional = true }

[dev-dependencies]
rand = { version = "0.7.3" }

[[bin]]
name = "fwsig"
path = "src/main.rs"
required-features = [ "cli" ]
